acme-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-ingress
  labels:
    name: acme-ingress
  namespace: acme-shop
spec:
  rules:
  - host: practica.keepcoding.marianotoscano.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
